database_connectivity and changes in ui

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,56 +1,29 @@
  <main>
   <div class="page">
       <div class="header">
-        <h1 class="logo">Picturegram</h1>
-        <p>Sign up to see photos and videos from your friends.</p>
-        <button><i class="fab fa-facebook-square"></i> Log in with Facebook</button>
+        <h1 class="logo">PicGram</h1>
+<!--        <p>Sign up to see photos and videos from your friends.</p>-->
         <div>
-          <hr>
-          <p>OR</p>
+            <hr>
           <hr>
         </div>
       </div>
       <div class="container">
-        <form action="">
-          <input type="text" placeholder="Mobile Number or Email">
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Username">
-          <input type="password" placeholder="Password">
+        <form action="/signup/" method="post">
+          <input type="text" placeholder="Enter  Email" name="email">
+          <input type="text" placeholder="Full Name" name="f_name">
+          <input type="text" placeholder="Username" name="user_name">
+          <input type="password" placeholder="Password" name="password">
           <button>Sign up</button>
         </form>
-
-        <ul>
-          <li>By signing up, you agree to our</li>
-          <li><a href="">Terms</a></li>
-          <li><a href="">Data Policy</a></li>
-          <li>and</li>
-          <li><a href="">Cookies Policy</a> .</li>
-       </ul>
       </div>
   </div>
   <div class="option">
-     <p>Have an account? <a href="">Log in</a></p>
-  </div>
-  <div class="otherapps">
-    <p>Get the app.</p>
-    <button type="button"><i class="fab fa-apple"></i> App Store</button>
-    <button type="button"><i class="fab fa-google-play"></i> Google Play</button>
+     <p>Have an account? <a href="http://127.0.0.1:8000/login/">Log in</a></p>
   </div>
   <div class="footer">
-    <ul>
-      <li><a href="">ABOUT</a></li>
-      <li><a href="">HELP</a></li>
-      <li><a href="">PRESS</a></li>
-      <li><a href="">API</a></li>
-      <li><a href="">JOBS</a></li>
-      <li><a href="">PRIVACY</a></li>
-      <li><a href="">TEMS</a></li>
-      <li><a href="">LOCATIONS</a></li>
-      <li><a href="">TOP ACCOUNTS</a></li>
-      <li><a href="">HASHTAGS</a></li>
-      <li><a href="">LANGUAGE</a></li>
-    </ul>
-    <p>© 2020 PICTUREGRAM</p>
+
+    <p>© 2020 PICGRAM</p>
   </div>
 </main>
 
