validations of login and sign up

--- a/templates/index.html
+++ b/templates/index.html
@@ -1157,7 +1157,7 @@
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Similique laudantium consequuntur vitae impedit eaque?
                       Accusantium rerum vel ducimus perspiciatis nesciunt a
-                      minus minima earum delectus. Doloremque consequuntur
+                      minus minima earum delectus. Doloremque
                       ducimus illum placeat!
                     </span>
                   </div>
