--- a/templates/login.html
+++ b/templates/login.html
@@ -139,7 +139,7 @@ input:focus {
 </head>
 <body>
 
-<form action="/login/" method="post">
+<form action="/login_page/" method="post">
 <div id="wrapper">
 
   <div class="main-content">
@@ -148,13 +148,14 @@ input:focus {
       <h2>PicGram</h2>
     </div>
     <div class="l-part">
-      <input type="text" placeholder="Username" class="input-1"  name="username">
+      <input type="text" placeholder="Email" class="input-1"  name="email">
       <div class="overlap-text">
         <input type="password" placeholder="Password" class="input-2" name="password">
 <!--        <a href="#">Forgot?</a>-->
 
       </div>
-      <input type="button" value="Log in" class="btn" />
+        <button class="btn">Sign up</button>
+<!--      <input type="button" value="Log in" class="btn" />-->
     </div>
   </div>
   <div class="sub-content">
