--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="container">
-        <form action="/signup/" method="post">
+        <form action="/signup_page/" method="post">
           <input type="text" placeholder="Enter  Email" name="email">
           <input type="text" placeholder="Full Name" name="f_name">
           <input type="text" placeholder="Username" name="user_name">
