from kamlesh -> Profile Ui added

--- a/templates/first.html
+++ b/templates/first.html
@@ -12,7 +12,11 @@
     <input type="hidden" value={{fullname}} name="email">
     <input type="hidden" value={{phone}} name="phone">
     <button>update profile</button>
+
+    <a href="http://127.0.0.1:8000/profile/">profile Ui</a>
 </form>
+
+
 
 </body>
 </html>
