--- a/templates/index.html
+++ b/templates/index.html
@@ -1548,7 +1548,8 @@
       <button class="navbar__button profile-button">
         <div class="profile-button__border"></div>
         <div class="profile-button__picture">
-          <img src="assets/default-user.png" alt="User Picture" />
+          <a></a>
+          <img src="assets/default-user.png" alt="User Picture" >
         </div>
       </button>
     </nav>
