update_profile data into backend and show dynamic value on profile

--- a/templates/first.html
+++ b/templates/first.html
@@ -6,16 +6,19 @@
 </head>
 <body>
 <h2>{{fname}} {{lname}} </h2>
-<form action="/updateprofile/" method="post">
-    <input type="hidden" value={{email}} name="email">
-    <input type="hidden" value={{username}} name="usename">
-    <input type="hidden" value={{fullname}} name="email">
-    <input type="hidden" value={{phone}} name="phone">
-    <button>update profile</button>
+<!--<form action="/getupdatevalue/" method="post">-->
+<!--    <input type="hidden" value={{email}} name="email">-->
+<!--    <input type="hidden" value={{username}} name="username">-->
+<!--    <input type="hidden" value={{fullname}} name="fullname">-->
+<!--&lt;!&ndash;    <input type="hidden" value={{phone}} name="phone">&ndash;&gt;-->
+<!--&lt;!&ndash;     {"email": email,"username":username,"fullname":fullname,&ndash;&gt;-->
+<!--    <button>update profile</button>-->
+
+<!--&lt;!&ndash;    <a href="http://127.0.0.1:8000/update_profile/">update profile</a>&ndash;&gt;-->
+
+<!--</form>-->
 
     <a href="http://127.0.0.1:8000/profile/">profile Ui</a>
-</form>
-
 
 
 </body>
