--- a/templates/second.html
+++ b/templates/second.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 login with Username and Password
-<a href="http://127.0.0.1:8000/login/">Login</a>
+<a href="http://127.0.0.1:8000/login/">Login</a> <br>
+
+<div>
+    {{email}} full name --> {{fullname}}
+</div>
+
+
 </body>
 </html>
