--- a/templates/otp_verify.html
+++ b/templates/otp_verify.html
@@ -1,31 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <title>Title</title>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>-->
 
+<!--</head>-->
+<!--<body>-->
+<!--<form action="/otp_verify/" method="post">-->
+<!--    <h1>Please Verify Your Account</h1>-->
+<!--<div id="app">-->
+<!--    <div class="container height-100 d-flex justify-content-center align-items-center">-->
+<!--        <div class="position-relative">-->
+<!--            <div class="card p-2 text-center">-->
+<!--                <h6>Please enter the one time password <br> </h6>-->
+<!--                <div> <span> sent to</span>  </div> {{email}}-->
+<!--                <input type="hidden" name="email" value= {{email}} >-->
+<!--                <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2"> <input class="m-2 text-center form-control rounded" type="text" id="input1" v-on:keyup="inputenter(1)" name ="otp1" maxlength="1" /> <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(2)" type="text" id="input2" name ="otp2" maxlength="1" /> <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(3)" type="text" id="input3" name ="otp3" maxlength="1" /> <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(4)" type="text" id="input4"  name ="otp4" maxlength="1" /> </div>-->
+<!--                <div class="mt-4"> <button class="btn btn-danger px-4 validate">Validate</button> </div>-->
+<!--                <div class="mt-3 content d-flex justify-content-center align-items-center"> <span>Didn't get the code</span> <a href="#" class="text-decoration-none ms-3">Resend(1/3)</a> </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--</form>-->
+
+<!--</body>-->
+<!--</html>-->
+
+<html>
+<head>
+    <title>otp verification</title>
+<style>
+    body{
+  background:#eee;
+}
+
+.bgWhite{
+  background:white;
+  box-shadow:0px 3px 6px 0px #cacaca;
+}
+
+.title{
+  font-weight:600;
+  margin-top:20px;
+  font-size:24px
+}
+
+.customBtn{
+  border-radius:0px;
+  padding:10px;
+}
+
+form input{
+  display:inline-block;
+  width:50px;
+  height:50px;
+  text-align:center;
+}
+</style>
+
+    <script>let digitValidate = function(ele){
+  console.log(ele.value);
+  ele.value = ele.value.replace(/[^0-9]/g,'');
+}
+
+let tabChange = function(val){
+    let ele = document.querySelectorAll('input');
+    if(ele[val-1].value != ''){
+      ele[val].focus()
+    }else if(ele[val-1].value == ''){
+      ele[val-2].focus()
+    }
+ }
+
+</script>
 </head>
 <body>
-<form action="/otp_verify/" method="post">
-    <h1>Please Verify Your Account</h1>
-<div id="app">
-    <div class="container height-100 d-flex justify-content-center align-items-center">
-        <div class="position-relative">
-            <div class="card p-2 text-center">
-                <h6>Please enter the one time password <br> </h6>
-                <div> <span> sent to</span>  </div> {{email}}
-                <input type="hidden" name="email" value= {{email}} >
-                <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2"> <input class="m-2 text-center form-control rounded" type="text" id="input1" v-on:keyup="inputenter(1)" name ="otp1" maxlength="1" /> <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(2)" type="text" id="input2" name ="otp2" maxlength="1" /> <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(3)" type="text" id="input3" name ="otp3" maxlength="1" /> <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(4)" type="text" id="input4"  name ="otp4" maxlength="1" /> </div>
-                <div class="mt-4"> <button class="btn btn-danger px-4 validate">Validate</button> </div>
-                <div class="mt-3 content d-flex justify-content-center align-items-center"> <span>Didn't get the code</span> <a href="#" class="text-decoration-none ms-3">Resend(1/3)</a> </div>
-            </div>
-        </div>
-    </div>
-</div>
-</form>
 
+
+<form action="/otp_verify/" method="post">
+
+<div class="container">
+  <div class="row justify-content-md-center">
+      <div class="col-md-4 text-center">
+        <div class="row">
+          <div class="col-sm-12 mt-5 bgWhite">
+            <div class="title">
+              Verify OTP
+            </div>
+              <div>
+                   <input type="hidden" name="email" value= {{email}}>
+              </div>
+
+            <form action="" class="mt-5">
+
+              <input class="otp" type="text" oninput='digitValidate(this)' onkeyup='tabChange(1)' maxlength=1 name ="otp1">
+              <input class="otp" type="text" oninput='digitValidate(this)' onkeyup='tabChange(2)' maxlength=1 name ="otp2">
+              <input class="otp" type="text" oninput='digitValidate(this)' onkeyup='tabChange(3)' maxlength=1 name ="otp3">
+              <input class="otp" type="text" oninput='digitValidate(this)'onkeyup='tabChange(4)' maxlength=1 name ="otp4">
+            </form>
+            <hr class="mt-4">
+            <button class='btn btn-primary btn-block mt-4 mb-4 customBtn'>Verify</button>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+    </form>
 </body>
 </html>
