--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,9 +12,26 @@
 
 			<div class="profile-user-settings">
 
-				<h1 class="profile-user-name">janedoe_</h1>
+				<h1 class="profile-user-name">{{username}}</h1>
 
-				<button class="btn profile-edit-btn">Edit Profile</button>
+				<div>
+					<form action="/getupdatevalue/" method="post">
+				    <input type="hidden" value={{email}} name="email">
+    				<input type="hidden" value={{username}} name="username">
+    				<input type="hidden" value={{fullname}} name="fullname">
+    				<input type="hidden" value={{bio}} name="bio">
+<!--    <input type="hidden" value={{phone}} name="phone">-->
+<!--     {"email": email,"username":username,"fullname":fullname,-->
+<!--    				<button>update profile</button>-->
+					<button class="btn profile-edit-btn">Edit Profile</button>
+<!--    <a href="http://127.0.0.1:8000/update_profile/">update profile</a>-->
+
+					</form>
+
+				</div>
+
+<!--				<button class="btn profile-edit-btn">Edit Profile</button>-->
+<!--				<a href="http://127.0.0.1:8000/getupdatevalue/" class="btn profile-edit-btn">Edit Profile</a>-->
 
 				<button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
 
@@ -32,7 +49,7 @@
 
 			<div class="profile-bio">
 
-				<p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
+				<p><span class="profile-real-name"></span> {{bio}}</p>
 
 			</div>
 
