--- a/templates/otp_verify.html
+++ b/templates/otp_verify.html
@@ -32,7 +32,9 @@
 
 <html>
 <head>
-    <title>otp verification</title>
+    <title>otp  verification</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
 <style>
     body{
   background:#eee;
@@ -62,7 +64,8 @@ form input{
 }
 </style>
 
-    <script>let digitValidate = function(ele){
+    <script>
+   let digitValidate = function(ele){
   console.log(ele.value);
   ele.value = ele.value.replace(/[^0-9]/g,'');
 }
@@ -100,7 +103,7 @@ let tabChange = function(val){
               <input class="otp" type="text" oninput='digitValidate(this)' onkeyup='tabChange(1)' maxlength=1 name ="otp1">
               <input class="otp" type="text" oninput='digitValidate(this)' onkeyup='tabChange(2)' maxlength=1 name ="otp2">
               <input class="otp" type="text" oninput='digitValidate(this)' onkeyup='tabChange(3)' maxlength=1 name ="otp3">
-              <input class="otp" type="text" oninput='digitValidate(this)'onkeyup='tabChange(4)' maxlength=1 name ="otp4">
+              <input class="otp" type="text" oninput='digitValidate(this)' onkeyup='tabChange(4)' maxlength=1 name ="otp4">
             </form>
             <hr class="mt-4">
             <button class='btn btn-primary btn-block mt-4 mb-4 customBtn'>Verify</button>
