--- a/templates/second.html
+++ b/templates/second.html
@@ -12,6 +12,11 @@ login with Username and Password
     {{email}} full name --> {{fullname}}
 </div>
 
+<div>
+    {{result}}
+    {{email}} {{username}}
+</div>
+
 
 </body>
 </html>
