--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Instagram Clone</title>
+    <title>PicGram</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon" />
@@ -60,29 +60,27 @@
 
 <!--          home profile sk search-->
         <div class="header__search">
-        <form action="/search/" method="get">
+        <form action="/search/" method="post">
           <input type="text" placeholder="Search" name="search" />
-<!--          <input type="hidden" name="email" >-->
+<!--          <svg-->
+<!--            width="24"-->
+<!--            height="24"-->
+<!--            viewBox="0 0 24 24"-->
+<!--            fill="none"-->
+<!--            xmlns="http://www.w3.org/2000/svg"-->
+<!--          >-->
+<!--            <path-->
+<!--              fill-rule="evenodd"-->
+<!--              clip-rule="evenodd"-->
+<!--              d="M21.669 21.6543C21.8625 21.4622 21.863 21.1494 21.6703 20.9566L17.3049 16.5913C18.7912 14.9327 19.7017 12.7525 19.7017 10.3508C19.7017 5.18819 15.5135 1 10.3508 1C5.18819 1 1 5.18819 1 10.3508C1 15.5135 5.18819 19.7017 10.3508 19.7017C12.7624 19.7017 14.9475 18.7813 16.606 17.2852L20.9739 21.653C21.1657 21.8449 21.4765 21.8454 21.669 21.6543ZM1.9843 10.3508C1.9843 5.7394 5.7394 1.9843 10.3508 1.9843C14.9623 1.9843 18.7174 5.7394 18.7174 10.3508C18.7174 14.9623 14.9623 18.7174 10.3508 18.7174C5.7394 18.7174 1.9843 14.9623 1.9843 10.3508Z"-->
+<!--              fill="#A5A5A5"-->
+<!--              stroke="#A5A5A5"-->
+<!--              stroke-linecap="round"-->
+<!--              stroke-linejoin="round"-->
+<!--            />-->
+<!--          </svg>-->
 
-          <svg
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M21.669 21.6543C21.8625 21.4622 21.863 21.1494 21.6703 20.9566L17.3049 16.5913C18.7912 14.9327 19.7017 12.7525 19.7017 10.3508C19.7017 5.18819 15.5135 1 10.3508 1C5.18819 1 1 5.18819 1 10.3508C1 15.5135 5.18819 19.7017 10.3508 19.7017C12.7624 19.7017 14.9475 18.7813 16.606 17.2852L20.9739 21.653C21.1657 21.8449 21.4765 21.8454 21.669 21.6543ZM1.9843 10.3508C1.9843 5.7394 5.7394 1.9843 10.3508 1.9843C14.9623 1.9843 18.7174 5.7394 18.7174 10.3508C18.7174 14.9623 14.9623 18.7174 10.3508 18.7174C5.7394 18.7174 1.9843 14.9623 1.9843 10.3508Z"
-              fill="#A5A5A5"
-              stroke="#A5A5A5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
-              <button header__theme-button-sun>search</button>
-          </form>
+        </form>
         </div>
 
 
@@ -258,15 +256,22 @@
 <!--          </a>-->
 
 <!--          home profile sk-->
-          <button class="profile-button">
-            <a href="http://127.0.0.1:8000/profile/">
-            <div class="profile-button__border"></div>
-            <div class="profile-button__picture">
-              <img src="assets/default-user.png" alt="User Picture" />
-            </div>
-          </a>
-          </button>
-
+            <form action="/profile/" method="post" style="margin-top:25px">
+              <div>
+                <input type="hidden" name="email" value={{email}}>
+                <input type="hidden" name="username" value={{username}}>
+                <input type="hidden" name="bio" value={{bio}}>
+                <input type="hidden" name="fullname" value={{fullname}}>
+                <button class="profile-button">
+                  <a href="#">
+                    <div class="profile-button__border"></div>
+                    <div class="profile-button__picture">
+                    <img src="assets/default-user.png" alt="User Picture" />
+                    </div>
+                  </a>
+                </button>
+              </div>
+            </form>
         </div>
       </nav>
     </header>
@@ -1337,7 +1342,7 @@
         </div>
 
         <section class="side-menu">
-          {% for i,j in result %}
+          {% for i,j,k in result %}
             <div class="side-menu__user-profile">
               <a
                 href={{i}}
@@ -1351,7 +1356,7 @@
                     >{{j}}
                   </a
                   >
-                  <span>####</span>
+                  <span>{{k}}</span>
                   </div>
                   <button class="side-menu__user-button">Follow</button>
               </div>
