--- a/app1/templates/app1/profile_img.html
+++ b/app1/templates/app1/profile_img.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="py-5 text-center bg-secondary text-white">
         <h1 class="mb-3">Upload Image</h1>
-        <form action="profile_img" method="post" enctype="multipart/form-data">
+        <form action="" method="post" enctype="multipart/form-data">
           {% csrf_token %}
           {{form}}
           <input type="submit" class="btn btn-danger" value="Upload">
