url set profile_img

--- a/templates/login.html
+++ b/templates/login.html
@@ -160,7 +160,7 @@ input:focus {
   </div>
   <div class="sub-content">
     <div class="s-part">
-      Don't have an account?<a href="http://127.0.0.1:8000/signup/">Sign up</a>
+      Don't have an account?<a href="http://127.0.0.1:8000/">Sign up</a>
     </div>
   </div>
 </div>
