changes on index.html

--- a/templates/second.html
+++ b/templates/second.html
@@ -5,14 +5,25 @@
     <title>Title</title>
 </head>
 <body>
-<a href="http://127.0.0.1:8000/login/">Login</a>
+<form method="post" action="profile_img" id="link">
+</form>
+
+
 <script>
-
     alert("update profile succesfull" )
-    window.location.href = "http://127.0.0.1:8000/profile_img/";
 
-<!--    alert(document.getElementByTagName('a')[0].innerhtml="Login")-->
+
+<!--    window.location.href = "http://127.0.0.1:8000/login_page/" ;-->
 </script>
+<!--<input type="hidden" class="btn" value={{email}}>-->
+<!--<input type="hidden" class="btn" value={{bio}}>-->
+
+<!--<script>-->
+<!--     const collection = document.getElementsByClassName("btn");-->
+<!--    collection[0].innerHTML = "alert("update profile succesfull" )";-->
+
+<!--</script>-->
+<a href="http://127.0.0.1:8000/login/">Login</a>
 
 </body>
 </html>
