--- a/templates/new.html
+++ b/templates/new.html
@@ -11,32 +11,9 @@
     <title>Image Uploader</title>
   </head>
   <body>
-    <div class="container">
-      <div class="py-5 text-center bg-secondary text-white">
-        <h1 class="mb-3">Upload Image</h1>
-        <form action="" method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          {{form}}
-          <input type="submit" class="btn btn-danger" value="Upload">
-        </form>
-      </div>
-      <div class="row">
-        {% for x in img %}
-          <div class="col-sm-4">
-            <div class="card m-2">
-              <img src="{{x.photo.url}}" alt="" class="card-img-top" height="200px">
-            </div>
+    <div>
+            <img src="C:\Users\Saubhagya\PycharmProjects\clone\static\image\chris-hardy-jZLlUKhIxBM-unsplash.jpg" alt="image loading" height="900" , width="700">
           </div>
-
-        {% endfor %}
-
-      </div>
-
-    </div>
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   </body>
 </html>
