--- a/templates/profile_img.html
+++ b/templates/profile_img.html
@@ -449,11 +449,15 @@ Remove or comment-out the code block below to see how the browser will fall-back
   <body>
     <div class="container">
       <div class="py-5 text-center bg-secondary text-white">
-        <h1 class="mb-3">Upload Image {{gmail}}</h1>
-        <form action="" method="post" enctype="multipart/form-data">
+        <h1 class="mb-3">Upload Image</h1>
+        <form action=" " method="post" enctype="multipart/form-data">
+<!--            <input type="hidden" name="email", value={{email}}>-->
           {% csrf_token %}
           {{form}}
           <input type="submit" class="btn btn-danger" value="Upload">
+          <input type="hidden" class="btn btn-danger" value={{email}}>
+          <input type="hidden" class="btn btn-danger" value={{bio}}>
+
         </form>
       </div>
       <div class="row">
