--- a/templates/updateprofile.html
+++ b/templates/updateprofile.html
@@ -158,7 +158,7 @@ input:focus {
         <div>
             <input type="text" placeholder="Email" class="input-3" name="email" value={{email}}>
         </div>
-            <input type="text" placeholder="Add Bio" class="input-5" name="Bio">
+            <input type="text" placeholder="Add Bio" class="input-5" name="Bio" value={{bio}}>
         </div>
 
 
